--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,3 @@
-.container {
-  max-width: 100%;
-  width: 100%;
-}
-
 .docs-example {
   display: flex;
   align-items: center;
@@ -25,25 +20,8 @@
   border: 0;
   height: auto;
   width: 100%;
-  /* min-width: 320px; */
-  /* max-width: 100%; */
 }
 
-/* .c-resize--left, */
-/* .c-resize--right { */
-/*   background-color: green; */
-/*   display: inline-block; */
-/*   width: 5px; */
-/*   height: 20px; */
-/* } */
-
-.swatch {
-  padding: .25em;
-  margin: 0 .3em .3em 0;
-  word-break: break-all;
-  word-wrap: break-word;
-  overflow: hidden;
-}
 
 .color-property {
   font-size: 80%;
@@ -57,272 +35,45 @@
   font-size: 14px;
 }
 
-.menu-container {
-  /*position: fixed;*/
-  /*right: 0;*/
+.markdown-body pre {
+  word-wrap: normal;
+  padding: 16px;
+  overflow: auto;
+  font-size: 85%;
+  line-height: 1.45;
+  background-color: #f7f7f7;
+  border-radius: 3px;
+  margin: 0 0 16px 0;
 }
 
-/*---
-section: mdcss GitHub
----
-[![NPM Version][npm-img]][npm] [![Build Status][ci-img]][ci]
-[mdcss GitHub] is a theme for [mdcss] based on the documentation styles seen
-across GitHub.
-[ci]:      https://travis-ci.org/jonathantneal/mdcss-theme-github
-[ci-img]:  https://img.shields.io/travis/jonathantneal/mdcss-theme-github.svg
-[mdcss]:   https://github.com/jonathantneal/mdcss
-[npm]:     https://www.npmjs.com/package/mdcss-theme-github
-[npm-img]: https://img.shields.io/npm/v/mdcss-theme-github.svg
-[mdcss GitHub]: https://github.com/jonathantneal/mdcss-theme-github
-*/
+.masthead {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+}
 
-/*---
-title:   Usage
-section: mdcss GitHub
----
-Add [mdcss] and [mdcss GitHub] to your build tool:
-```bash
-npm install mdcss mdcss-theme-github --save-dev
-```
-Whenever [mdcss] is used, reference this theme.
-```js
-require('mdcss')({
-	theme: require('mdcss-theme-github')({ /​* options *​/ })
-})
-```
-[mdcss]:   https://github.com/jonathantneal/mdcss
-[mdcss GitHub]: https://github.com/jonathantneal/mdcss-theme-github
-*/
+body {
+  padding-top: 75px;
+}
 
-/*---
-title:  Options
-section: mdcss GitHub
----
-Options control the look and feel of the mdcss GitHub theme as well as any
-iframe examples that may be used.
-#### `title`
-Type: `String`  
-Default: `'Style Guide'`
-The page title to be used by the style guide.
-#### `logo`
-Type: `String`  
-Default: `'mdcss-logo.png'`
+.menu-slide label:after {
+  color: #fff !important;
+}
 
-<img src="https://jonathantneal.github.io/mdcss-theme-github/demo/logo.png" height="32">
+.menu-header-container a {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
 
-The page logo to be used by the style guide.
-#### `examples.base`
-Type:    `String`  
-Default: `null`
-The base URL to use for all relative URLs contained within an example,
-including CSS and JavaScript references.
-#### `examples.target`
-Type:    `String`  
-Default: `'_self'`
-The frame to open example hyperlinks from within an example.
-#### `examples.css`
-Type:    `Array`  
-Default: `['style.css']`
-A list of CSS files to be used by examples.
-#### `examples.js`
-Type:    `Array`  
-Default: `null`
-A list of JavaScript files to be used by examples.
-#### `examples.bodyjs`
-Type:    `Array`  
-Default: `null`
-A list of JavaScript files to be used by examples, inserted after the example.
-#### `examples.htmlcss`
-Type:    `String`  
-Default: `'background:none;border:0;clip:auto;display:block;height:auto;margin:0;padding:0;position:static;width:auto'`
-A string of styles applied to the `<html>` wrapping the example. These default
-styles are used to create a seamless effect with the styleguide.
-#### `examples.bodycss`
-Type:    `String`  
-Default: `'background:none;border:0;clip:auto;display:block;height:auto;margin:0;padding:16px;position:static;width:auto'`
-A string of styles applied to the `<body>` wrapping the example. These default
-styles are used to create a seamless effect with the styleguide.
-*/
+.menu-heading {
+  margin-left: 10px;
+}
 
-/*---
-title:   Examples
-section: Overview
----
-The `example` keyword is used by code blocks to indicate that code will be
-rendered as a living example on the page.
-An `example:html` code block
-generates an iframe using the contents of the code block, followed by the
-original code block. For example:
-````css
-```example:html
-<button class="btn">This is a button</button>
-```
-````
-is rendered as:
-```example:html
-<button class="btn">This is a button</button>
-```
-An `example` code block generates an iframe using the contents of the code
-block without also rendering the original code block. For example:
-````css
-```example
-<button class="btn">This is a button</button>
-```
-````
-is rendered as:
-```example
-<button class="btn">This is a button</button>
-```
-*/
-
-/*---
-title:   Colors
-section: Overview
----
-Color examples are generated with `example:color` code blocks. For example:
-````css
-```example:color
-@color: #ffffff @name: White
-@color: #f8f8f8 @name: White Smoke
-@color: #e7e7e7 @name: Whisper
-@color: #777777 @name: Grey
-@color: #565454 @name: Matterhorn
-@color: #4078c0 @name: Steel Blue
-@color: #333333 @name: Night Rider
-```
-````
-is rendered as:
-```example:color
-@color: #ffffff @name: White
-@color: #f8f8f8 @name: White Smoke
-@color: #e7e7e7 @name: Whisper
-@color: #777777 @name: Grey
-@color: #565454 @name: Matterhorn
-@color: #4078c0 @name: Steel Blue
-@color: #333333 @name: Night Rider
-```
-*/
-
-/*---
-title:   Order
-section: Overview
----
-The `order` heading detail is used to control the order of sections in the generated style guide. A negative order value will shift the item before non-ordered items, while a positive order value will push the item after non-ordered values.
-```css
-/*---
-section: First Section
-order: -1
----
-```
-Attached to a subsection, the order detail will control the position of the subsection inside the section.
-```css
-/*---
-title:   Last Subsection
-section: Third Section
-order: 1
----
-*/
-
-/*---
-title:   Typography
-section: Overview
----
-This theme uses a common Helvetica font stack with a relative line height of
-1.6 times the font size.
-*/
-
-/*---
-title:   Headings
-section: Typography
----
-Headings match GitHub documentation conventions.
-```example:html
-<h1>Heading Level 1</h1>
-<h2>Heading Level 2</h2>
-<h3>Heading Level 3</h3>
-<h4>Heading Level 4</h4>
-<h5>Heading Level 5</h5>
-<h6>Heading Level 6</h6>
-```
-*/
-
-/*---
-title:   Iconography
-section: Overview
----
-This theme uses no iconography.
-*/
-
-/*---
-title: Layout
----
-We use flex to horizontally stack the heading and main content areas.
-The navigation remains fixed while you scroll.
-*/
-
-/*---
-title: Visual Language
----
-This is just a sample section. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit. Reiciendis asperiores temporibus beatae fugit totam pariatur,
-aliquam commodi consequuntur id error ipsam suscipit quas doloremque
-perferendis quam! Ullam, debitis ab maiores.
-```html
-<form class="a-particularly-long-class-name">
-	<fieldset class="control-group">
-		<input class="control-input" type="text" value="A particularly long value for an input control">
-	</fieldset>
-</form>
-```
-*/
-
-/*---
-title:   Hero
-section: Visual Language
----
-This is just a sample section. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit. Reiciendis asperiores temporibus beatae fugit totam pariatur,
-aliquam commodi consequuntur id error ipsam suscipit quas doloremque
-perferendis quam! Ullam, debitis ab maiores.
-*/
-
-/*---
-title:   Figure
-section: Visual Language
----
-This is just a sample section. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit. Reiciendis asperiores temporibus beatae fugit totam pariatur,
-aliquam commodi consequuntur id error ipsam suscipit quas doloremque
-perferendis quam! Ullam, debitis ab maiores.
-*/
-
-/*---
-title:   Blockquote
-section: Visual Language
----
-This is just a sample section. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit. Reiciendis asperiores temporibus beatae fugit totam pariatur,
-aliquam commodi consequuntur id error ipsam suscipit quas doloremque
-perferendis quam! Ullam, debitis ab maiores.
-*/
-
-/*---
-title:   Media
-section: Visual Language
----
-This is just a sample section. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit. Reiciendis asperiores temporibus beatae fugit totam pariatur,
-aliquam commodi consequuntur id error ipsam suscipit quas doloremque
-perferendis quam! Ullam, debitis ab maiores.
-*/
-
-/*---
-title:   Aspect
-section: Visual Language
-order:   -1
----
-This is just a sample section. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit. Reiciendis asperiores temporibus beatae fugit totam pariatur,
-aliquam commodi consequuntur id error ipsam suscipit quas doloremque
-perferendis quam! Ullam, debitis ab maiores.
-*/
+.menu-item {
+  margin-left: 25px;
+}
+/**
+ * Github-like theme for Prism.js
+ * @author Luke Askew http://github.com/lukeaskew
+ */
+code, code[class*='language-'], pre[class*='language-'] {color: #333; text-align: left; white-space: pre; word-spacing: normal; tab-size: 4; hyphens: none; font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace; line-height: 1.4; direction: ltr; cursor: text;} pre[class*='language-'] {overflow: auto; margin: 1em 0; padding: 1.2em; border-radius: 3px; font-size: 85%;} p code, li code, table code {margin: 0; border-radius: 3px; padding: 0.2em 0; font-size: 85%;} p code:before, p code:after, li code:before, li code:after, table code:before, table code:after {letter-spacing: -0.2em; content: '\00a0';} code, :not(pre) > code[class*='language-'], pre[class*='language-'] {background: #f7f7f7;} :not(pre) > code[class*='language-'] {padding: 0.1em; border-radius: 0.3em;} .token.comment, .token.prolog, .token.doctype, .token.cdata {color: #969896;} .token.punctuation, .token.string, .token.atrule, .token.attr-value {color: #183691;} .token.property, .token.tag {color: #63a35c;} .token.boolean, .token.number {color: #0086b3;} .token.selector, .token.attr-name, .token.attr-value .punctuation:first-child, .token.keyword, .token.regex, .token.important {color: #a71d5d;} .token.operator, .token.entity, .token.url, .language-css .token.string {color: #a71d5d;} .token.entity {cursor: help;} .namespace {opacity: 0.7;}
